--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=customer-app
+product.get.all=http://localhost:8082//allprod
+product.get.byname=http://localhost:8082//getByprod_name
